# swtv4

./: README.md  meson.build
.github/workflows/: ci.yml
src/: gmg1.f  meson.build
