sources = files(
  'swt_v4.f',
  'CCFD.c',
  'MF2KGMG.c',
  'SOLVERS.c',
  'r_vector.c',
  'ctime.f',
  'daf1.f',
  'de45.f',
  'glo1bas6.f',
  'gmg1.f',
  'gutsdaf.f',
  'gwf1bas6.f',
  'gwf1bcf6.f',
  'gwf1chd6.f',
  'gwf1drn6.f',
  'gwf1drt1.f',
  'gwf1ets1.f',
  'gwf1evt6.f',
  'gwf1fhb1.f',
  'gwf1gag5.f',
  'gwf1ghb6.f',
  'gwf1hfb6.f',
  'gwf1huf2.f',
  'gwf1ibs6.f',
  'gwf1lak3.f',
  'gwf1lpf1.f',
  'gwf1mnw1.f',
  'gwf1rch6.f',
  'gwf1res1.f',
  'gwf1riv6.f',
  'gwf1sfr2.f',
  'gwf1str6.f',
  'gwf1sub1.f',
  'gwf1swt1.f',
  'gwf1wel6.f',
  'hufutl2.f',
  'hydmod.f',
  'imt1adv5.f',
  'imt1btn5.f',
  'imt1dsp5.f',
  'imt1fmi5.f',
  'imt1gcg5.f',
  'imt1rct5.f',
  'imt1ssm5.f',
  'imt1tob5.f',
  'imt1utl5.f',
  'lmg1.f',
  'lmt6.f',
  'memchk.f',
  'mhc1.f90',
  'obs1adv2.f',
  'obs1bas6.f',
  'obs1bas6vd.f',
  'obs1drn6.f',
  'obs1drn6vd.f',
  'obs1drt1.f',
  'obs1drt1vd.f',
  'obs1ghb6.f',
  'obs1ghb6vd.f',
  'obs1riv6.f',
  'obs1riv6vd.f',
  'obs1str6.f',
  'para-non.f',
  'parutl1.f',
  'pcg2.f',
  'pes1bas6.f',
  'pes1gau1.f',
  'rtedaf.f',
  'sen1bas6.f',
  'sen1chd6.f',
  'sen1drn6.f',
  'sen1drt1.f',
  'sen1ets1.f',
  'sen1evt6.f',
  'sen1ghb6.f',
  'sen1hfb6.f',
  'sen1huf2.f',
  'sen1lpf1.f',
  'sen1rch6.f',
  'sen1riv6.f',
  'sen1str6.f',
  'sen1wel6.f',
  'sip5.f',
  'sor5.f',
  'utl6.f',
  'vdf1.f',
  'vdf1bas6.f',
  'vdf1bcf6.f',
  'vdf1chd6.f',
  'vdf1drn6.f',
  'vdf1drt1.f',
  'vdf1ets1.f',
  'vdf1evt6.f',
  'vdf1fhb1.f',
  'vdf1ghb6.f',
  'vdf1huf2.f',
  'vdf1lmt6.f',
  'vdf1lpf1.f',
  'vdf1mnw1.f',
  'vdf1rch6.f',
  'vdf1riv6.f',
  'vdf1vsc1.f',
  'vdf1wel6.f',
)
incdir = include_directories('include')
exe = executable('swtv4', sources,
                 install: true,
                 include_directories: incdir,
                 dependencies: extra_deps,
                 link_language: 'fortran')
